--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
   <groupId>org.apache.helix</groupId>
   <artifactId>helix</artifactId>
-  <version>1.0.2</version>
+  <version>1.0.3-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Apache Helix</name>
 
@@ -391,7 +391,7 @@
     <connection>scm:git:https://git-wip-us.apache.org/repos/asf/helix.git</connection>
     <developerConnection>scm:git:https://git-wip-us.apache.org/repos/asf/helix.git</developerConnection>
     <url>https://git-wip-us.apache.org/repos/asf?p=helix.git;a=summary</url>
-    <tag>helix-1.0.2</tag>
+    <tag>HEAD</tag>
   </scm>
   <issueManagement>
     <system>Github</system>
