--- a/recipes/pom.xml
+++ b/recipes/pom.xml
@@ -22,7 +22,7 @@
   <parent>
     <groupId>org.apache.helix</groupId>
     <artifactId>helix</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
   </parent>
   <groupId>org.apache.helix.recipes</groupId>
   <artifactId>recipes</artifactId>
